--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,10 +14,34 @@
   }
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+  color: #727273;
+}
+
+input {
+  border-radius: 8px;
+  padding: 8px 12px;
+  border: 1px solid #727273;
+}
+
+button {
+  border-radius: 8px;
+  padding: 8px 12px;
+  background-color: #036988;
+  color: white;
+  transition: .2s;
+}
+
+button:hover {
+  background-color: #ff7e01;
+  transition: .2s;
 }
 
 @layer utilities {
