update: Subida de cursos arreglada. Mis cursos listos. Visualización de cursos por sus videos

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,22 +27,22 @@ body {
 
 input {
   height: 40px;
-  border-radius: 6px;
+  border-radius: 0.5rem;
   padding: 8px 12px;
   border: 1px solid #e5e5e5;
 }
 
 select {
   height: 40px;
-  border-radius: 6px;
+  border-radius: 0.5rem;
   padding: 8px 12px;
   border: 1px solid #e5e5e5;
 }
 
 button, .btn-primary {
   height: 40px;
-  border-radius: 6px;
-  padding: 8px 12px;
+  border-radius: 0.5rem;
+  padding: 8px 16px;
   background-color: #036988;
   color: white;
   transition: .2s;
@@ -64,18 +64,17 @@ a:hover {
 }
 
 .btn-secondary {
+  min-width: fit-content !important;
   height: 40px;
-  border-radius: 6px;
-  padding: 8px 12px;
-  background-color: transparent;
-  color: #036988;
-  border: 1px solid #036988;
+  border-radius: 0.5rem;
+  padding: 8px 16px;
+  background-color: #e5e5e5;
+  color: #404040;
   transition: .2s;
 }
 
 .btn-secondary:hover {
   color: white;
-  border: 1px solid #036988;
   background-color: #036988;
   transition: .2s;
 }
