--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,13 +49,13 @@ button, .btn-primary {
   height: 40px;
   border-radius: 0.5rem;
   padding: 8px 16px;
-  background-color: #036988;
-  color: white;
+  color: #1f2937;
   transition: .2s;
 }
 
 button:hover {
-  background-color: #ff7e01;
+  color: white;
+  background-color: #1f2937;
   transition: .2s;
 }
 
